--- a/talks_and_papers/qp_paper/papineau_qp1.tex
+++ b/talks_and_papers/qp_paper/papineau_qp1.tex
@@ -46,7 +46,8 @@
 	\section{Experiment One: Self-Paced Reading}
 	\subsection{Methods}
 	\subsubsection{Participants}
-	298 participants were recruited through the online recruitment platform Prolific. 200 participants were initially recruited, and an additional 98 Republican participants were subsequently recruited after the original sample revealed a heavy skew towards Democrat-identifying participants. All participants additionally self-identified as L1 English speakers and as having been born and in the United States, and all lived in the United States at the time of participation. None of the participants had participated in the pilot study or in any other study related to the present project. The demographic breakdown of the participants in Experiment One is provided in \hyperref[exp1-sample-table]{Table 1}.
+	298 participants were recruited through the online recruitment platform \textcite{prolific}. 200 participants were initially recruited, and an additional 98 Republican participants were subsequently recruited after the original sample revealed a heavy skew towards Democrat-identifying participants. All participants additionally self-identified as L1 English speakers and as having been born and in the United States, and all lived in the United States at the time of participation. None of the participants had participated in the pilot study or in any other study related to the present project. The demographic breakdown of the participants in Experiment One is provided in \hyperref[exp1-sample-table]{Table 1}.\par 
+	Participants were paid at a flat rate of \$1.75, with a mean completion time of 5.51 minutes. This resulted in an average rate of \$20.73/hr. Participants received payment regardless of their inclusion in the final analysis.
 	
 		\begin{table}[!ht]
 		\begin{center} 
@@ -72,6 +73,9 @@
 	Each of the 13 questionnaire items was presented alongside a sliding scale from `strongly disagree' to `strongly agree', which corresponded to numerical values of 0 and 100, respectively. The questions related to `gender linking' were inversely coded. Participants were then assigned a gender ideology score from 0 to 100 by taking the mean of their individual responses; the closer to 0 a participant is, the more open-minded their approach to gender, and the closer to 100, the more conservative or traditional their view of gender.\par 
 	Finally, participants filled out an optional post-experimental demographic survey. This included questions about their own gender, political affiliations, and age. The full survey is available online as part of the supplementary materials.
 	\subsection{Results}
+	\subsubsection{Exclusions}
+	Participants who failed to accurately respond to at least 85\% of the attention check questions were excluded from analysis. 19 participants were excluded on this basis, for a final total of 279 participants whose data were included in the analysis (6.3\% exclusion rate). \par 
+	Additionally, any individual trial whose reading time was 2.5 standard deviations away from that lexical item's mean reading time was excluded, to account for particularly slow or fast trials. An additional 238 trials were excluded on this basis, resulting in a final count of 5,342 observations for analysis (4.2\% exclusion rate). 
 	
 	\section{Experiment Two: Forced-Choice Production}
 	\subsection{Methods}
