desktop to laptop xmas 2021

--- a/results/final/final_processing_model.Rmd
+++ b/results/final/final_processing_model.Rmd
@@ -243,35 +243,6 @@ sprt_data <- read.csv('sprt_data.csv') %>%
   filter(region=='critical')
 ```
 
-```{r}
-demo_count <- read.csv('sprt_data.csv') %>%
-  filter(trial_id!= 'example') %>%
-  filter(region=='critical') 
-```
-
-```{r}
-demographic <- demo_count %>% 
-  mutate(poli_party = case_when(
-    subject_information.party_alignment == 1 | subject_information.party_alignment == 2 ~ "Republican",
-    subject_information.party_alignment == 3 ~ "Centrist",
-    subject_information.party_alignment == 4 | subject_information.party_alignment == 5 ~ "Democrat",
-  )) %>% 
-  select(workerid,poli_party,subject_information.gender,time_in_minutes) %>% 
-  group_by(workerid) %>% 
-  unique()
-```
-
-
-```{r}
-table(demographic$subject_information.gender,demographic$poli_party)
-```
-
-```{r}
-summary(demographic)
-```
-
-
-
 **Exclusions** 
 
 Now, we want to exclude any participants who failed to answer at least 85% of the attention check questions correctly. We do this by creating a list of all participants who scored less than 85% on these checks, and then cross-referencing this list with all data points, removing any data points whose participants were in the exclusion list. 
@@ -565,6 +536,43 @@ ultimate_model_unmutated <- lmer(resid_rt~gender_total:subject_information.age +
 
 ```{r}
 summary(ultimate_model_unmutated)
+```
+
+# Demographic Information
+
+```{r}
+demographic <- sprt_data %>% 
+  mutate(poli_party = case_when(
+    subject_information.party_alignment == 1 | subject_information.party_alignment == 2 ~ "Republican",
+    subject_information.party_alignment == 3 ~ "Non-Partisan",
+    subject_information.party_alignment == 4 | subject_information.party_alignment == 5 ~ "Democrat",
+  )) %>% 
+  select(workerid,poli_party,subject_information.gender,time_in_minutes) %>% 
+  group_by(workerid) %>% 
+  unique()
+```
+
+
+```{r}
+table(demographic$subject_information.gender,demographic$poli_party)
+```
+
+```{r}
+summary(demographic)
+```
+
+# Visualisations
+
+```{r}
+sprt_data %>%
+  filter(!is.na(poli_party)) %>%
+  group_by(gender_total,workerid,trial_gender,poli_party,condition) %>%
+  summarise(meanrt = mean(resid_rt)) %>%
+  ggplot(aes(x=gender_total,y=meanrt,color=trial_gender)) + 
+  geom_point() + 
+  geom_smooth(method='lm') + 
+  scale_color_manual(values = bran_palette) + 
+  facet_grid(condition~poli_party) 
 ```
 
 # CUT MATERIALS: REMOVE BEFORE PUBLISHING 
