--- a/talks_and_papers/qp_paper/papineau_qp1.tex
+++ b/talks_and_papers/qp_paper/papineau_qp1.tex
@@ -16,7 +16,7 @@
 
 \graphicspath{{\main/figures/}{figures}}
 
-\title{`Sally the Congressperson': A Psycholinguistic Examination of the Indexical Value of English Gender Neutral Role Titles}
+\title{`Sally the Congressperson': The Role of Individual Ideology on the Processing and Production of English Gender Neutral Role Titles}
 
 \author{{\large \bf Brandon Papineau (branpap@stanford.edu)} \\
 	Department of Linguistics, Margaret Jacks Hall, Bldg. 460\\
@@ -46,8 +46,8 @@
 	\section{Experiment One: Self-Paced Reading}
 	\subsection{Methods}
 	\subsubsection{Participants}
-	298 participants were recruited through the online recruitment platform \textcite{prolific}. 200 participants were initially recruited, and an additional 98 Republican participants were subsequently recruited after the original sample revealed a heavy skew towards Democrat-identifying participants. All participants additionally self-identified as L1 English speakers and as having been born and in the United States, and all lived in the United States at the time of participation. None of the participants had participated in the pilot study or in any other study related to the present project. The demographic breakdown of the participants in Experiment One is provided in \hyperref[exp1-sample-table]{Table 1}.\par 
-	Participants were paid at a flat rate of \$1.75, with a mean completion time of 5.51 minutes. This resulted in an average rate of \$20.73/hr. Participants received payment regardless of their inclusion in the final analysis.
+	298 participants were recruited through the online recruitment platform \textcite{prolific}. 200 participants were initially recruited, and an additional 98 Republican participants were subsequently recruited after the original sample revealed a heavy skew towards Democrat-identifying participants. All participants additionally self-identified as L1 English speakers and as having been born and in the United States, and all lived in the United States at the time of participation. None of the participants had participated in the pilot study or in any other study related to the present project. The demographic breakdown of the participants whose data was included in Experiment One is provided in \hyperref[exp1-sample-table]{Table 1}.\par 
+	Participants were paid at a flat rate of \$1.75, with a mean completion time of 5.51 minutes (before exclusions). This resulted in an average rate of \$20.73/hr. Participants received payment regardless of their inclusion in the final analysis.
 	
 		\begin{table}[!ht]
 		\begin{center} 
@@ -58,8 +58,8 @@
 				\hline
 				&  Democrat & Republican & Non-Partisan\tablefootnote{In both studies, `Non-Partisan' participants were recruited as either Democrats or Republicans, but reported a centrist identity in the post-experimental questionnaire} \\
 				\hline
-				Female &  67 & 45 & 35 \\
-				Male & 49 & 65 & 28 \\
+				Female &  64 & 41 & 34 \\
+				Male & 46 & 59 & 25 \\
 				Other & 3 & 0 & 0 \\
 				Decline to state & 0 & 3 & 1 \\
 				\hline
@@ -70,12 +70,16 @@
 	\subsubsection{Stimuli \& Procedure}
 	
 	\subsubsection{Post-Experimental Survey} In order to assess the participants' ideologies towards gender, we employ the Social Roles Questionnaire developed by \textcite{baber2006social}. This survey consists of 13 questions which are designed to elicit both implicit and explicit ideologies about gender, including the notions of gender as an immutable fact vs gender as a social construct (what Baber and Tucker term `gender transendence'), as well as about the societal roles performed by the (binary) genders (`gender linking').\par 
-	Each of the 13 questionnaire items was presented alongside a sliding scale from `strongly disagree' to `strongly agree', which corresponded to numerical values of 0 and 100, respectively. The questions related to `gender linking' were inversely coded. Participants were then assigned a gender ideology score from 0 to 100 by taking the mean of their individual responses; the closer to 0 a participant is, the more open-minded their approach to gender, and the closer to 100, the more conservative or traditional their view of gender.\par 
+	Each of the 13 questionnaire items was presented alongside a sliding scale from `strongly disagree' to `strongly agree', which corresponded to numerical values of 0 and 100, respectively. The questions related to `gender linking' were inversely coded. Participants were then assigned a gender ideology score from 0 to 100 by taking the mean of their individual responses; the closer to 0 a participant is, the more open-minded their approach to gender, and the closer to 100, the more conservative or traditional their view of gender. These opposite poles of the spectrum were termed `gender progressive' and `gender conservative', respectively.\par 
 	Finally, participants filled out an optional post-experimental demographic survey. This included questions about their own gender, political affiliations, and age. The full survey is available online as part of the supplementary materials.
 	\subsection{Results}
+	All reading times presented in this study are residualized, controlling for the effect of orthographic length variation between critical items.
 	\subsubsection{Exclusions}
 	Participants who failed to accurately respond to at least 85\% of the attention check questions were excluded from analysis. 19 participants were excluded on this basis, for a final total of 279 participants whose data were included in the analysis (6.3\% exclusion rate). \par 
 	Additionally, any individual trial whose reading time was 2.5 standard deviations away from that lexical item's mean reading time was excluded, to account for particularly slow or fast trials. An additional 238 trials were excluded on this basis, resulting in a final count of 5,342 observations for analysis (4.2\% exclusion rate). 
+	\subsubsection{Ideology and Reading Time on Gender-Neutral Forms} In examining the role of gender ideology in the processing of gender-neutral terms with either male or female-coded coreferential names, we find that there is no significant effect of gender ideology ($\beta$ = -3.217e-03, \textit{SE} = 5.159e-03, \textit{t} = -0.624, \textit{p} = 0.5335). \par 
+	At the party-level, we find that Democrats are significantly faster than their Republican and Non-Partisan counterparts in their reading of gender-neutral terms ($\beta$ = -3.933e-01, \textit{SE} = 1.792e-01, \textit{t} = -2.195, \textit{p} = 0.029). While this could indicate a party-level ideology difference at play in the processing of neutral terms, the same effect was found in the sentence prefixes leading up to the critical items. As a result, we interpret this a spurious result unrelated to ideology and its affect on processing times.
+	
 	
 	\section{Experiment Two: Forced-Choice Production}
 	\subsection{Methods}
